[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/UI/UI.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/Margins.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UI/ActionInfoDisplay.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/UI/ActionCardContainer.gd" type="Script" id=4]
[ext_resource path="res://Scenes/UI/ActionAddTimer.gd" type="Script" id=5]

[node name="ActionSelectUI" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 1 )

[node name="Margins" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = -32.0
script = ExtResource( 2 )

[node name="ActionInfoDisplay" parent="Margins" instance=ExtResource( 3 )]
margin_left = -992.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 568.0
active = false

[node name="AdjudicateButton" type="Button" parent="Margins"]
margin_right = 80.0
margin_bottom = 41.0
text = "Adjudicate"

[node name="ActionCardContainer" type="HBoxContainer" parent="Margins"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -64.0
alignment = 1
script = ExtResource( 4 )

[node name="ActionAddTimer" type="Timer" parent="."]
wait_time = 0.1
script = ExtResource( 5 )
[connection signal="add_action_makers" from="." to="ActionAddTimer" method="init"]
[connection signal="addactionmaker" from="ActionAddTimer" to="." method="add_action_maker"]
[connection signal="timeout" from="ActionAddTimer" to="ActionAddTimer" method="_on_ActionAddTimer_timeout"]
